--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "rest-api",
     "scripts": {
-        "start": "node ./app.js",
-        "dev": "nodemon ./app.js"
+        "start": "node ./server.js",
+        "dev": "nodemon ./server.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
@@ -10,7 +10,8 @@
         "express": "^4.18.2",
         "joi": "^17.11.0",
         "mongoose": "^8.5.3",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "nanoid": "^3.3.4"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
